--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MastantIndiaAdmin</string>
+  <string name="app_name">MastantIndiaAdmin</string>
+  <string name="expo_runtime_version">1.0.0</string>
 </resources>
